# adaptive_picard_chebyshev_C-1

./: .gitignore  APC-0.0.1-cp39-cp39-macosx_10_9_universal2.whl  README.md  Requirments.text  makefile  output.txt  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml
APCexample.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
MBsrc/: matrix_builder.cpp
PYsrc/: PyModule.cpp
include/: APC.h  Orbit.h  adaptive_picard_chebyshev.h  c_functions.h  chebyshev.h  clenshaw_curtis_ivpII.h  const.h  interpolate.h  linktest.h  lsq_chebyshev_fit.h  perturbations.h  picard_chebyshev_propagator.h  picard_iteration.h  prepare_propagator.h  reosc_perigee.h
src/: APC  APC.cpp  APyC.cpp  CMakeLists.txt  Orbit.cpp  adaptive_picard_chebyshev  adaptive_picard_chebyshev.cpp  c_functions.cpp  chebyshev.cpp  clenshaw_curtis_ivpII.cpp  interpolate  interpolate.cpp  linktest.cpp  lsq_chebyshev_fit.cpp  main.cpp  matrix_builder.cpp  matrix_loader.c  output.txt  perturbations.cpp  perturbed_gravity.cpp  picard_chebyshev_propagator.cpp  picard_iteration.cpp  polydegree_segments.cpp  prepare_propagator.cpp  radial_gravity.cpp  reosc_perigee.cpp  test  test.c  test.cpp
src/APC.dSYM/Contents/: Info.plist
src/APC.dSYM/Contents/Resources/DWARF/: APC
src/adaptive_picard_chebyshev.dSYM/Contents/: Info.plist
src/adaptive_picard_chebyshev.dSYM/Contents/Resources/DWARF/: adaptive_picard_chebyshev
src/interpolate.dSYM/Contents/Resources/DWARF/: interpolate
src/test.dSYM/Contents/Resources/DWARF/: test
srcPy/: PyModule.cpp
testSRC/: test.cpp
(+15 files in other folders)
